# RealTime3DRendering

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.bat  clean.bat  copy_data.bat  generate.bat  make_data.bat  setup.bat
data/effects/: AmbientLighting.fx  AmbientLighting.fx.excluded  Basic.fx  BlinnPhong.fx  BlinnPhong.fx.excluded  BlinnPhongIntrinsic.fx  BlinnPhongIntrinsic.fx.excluded  Bloom.fx  ColorFilter.fx  ComputeShader.fx  DepthMap.fx  DiffuseLighting.fx  DirectionalShadowMapping.fx  DisplacementMapping.fx  DistortionMapping.fx  EnvironmentMapping.fx  EquirectangularToCubeMap.fx  Fog.fx  GaussianBlur.fx  Instancing.fx  InstancingPointLight.fx  IrradianceConvolution.fx  Lights.fx  ModelTessellation.fx  MultipleLights.fx  MultiplePointLights.fx  NormalMapping.fx  Pbr.fx  PbrLighting.fx  PbrLights.fx  Phong.fx  Phong.fx.excluded  PhongLighting.fx  PhongLights.fx  PointLight.fx  PointLightWithFog.fx  PointSprite.fx  ProjectiveTextureMapping.fx  QuadHeightMapTessellation.fx  QuadTessellation.fx  (+8 more)
data/effects/include/: Common.fxh  Lights.fxh  LightsData.fxh  PbrLighting.fxh  PhongLighting.fxh
data/fonts/: Arial_14_Regular.spritefont
src/: CMakeLists.txt
src/demo/: CMakeLists.txt
src/demo/src/: AnimationDemo.cpp  AnimationDemo.h  Application.cpp  Application.h  BasicMaterialDemo.cpp  BasicMaterialDemo.h  BasicTessellationDemo.cpp  BasicTessellationDemo.h  BloomDemo.cpp  BloomDemo.h  ColorFilterDemo.cpp  ColorFilterDemo.h  CubeComponent.cpp  CubeComponent.h  CubeDemo.cpp  CubeDemo.h  DemoApplication.cpp  DemoApplication.h  DemoUtils.cpp  DemoUtils.h  DiffuseLightingDemo.cpp  DiffuseLightingDemo.h  DirectionalShadowMappingDemo.cpp  DirectionalShadowMappingDemo.h  DisplacementMappingDemo.cpp  DisplacementMappingDemo.h  DistortionMappingDemo.cpp  DistortionMappingDemo.h  EnvironmentMappingDemo.cpp  EnvironmentMappingDemo.h  FogDemo.cpp  FogDemo.h  GaussianBlurDemo.cpp  GaussianBlurDemo.h  GeometryShaderDemo.cpp  GeometryShaderDemo.h  LibraryHelper.h  LightsData.h  ModelComponent.cpp  ModelComponent.h  (+33 more)
src/demo/src/Components/: AnimationDemo.cpp  AnimationDemo.h  BasicMaterialDemo.cpp  BasicMaterialDemo.h  BasicTessellationDemo.cpp  BasicTessellationDemo.h  BloomDemo.cpp  BloomDemo.h  ColorFilterDemo.cpp  ColorFilterDemo.h  ComputeShaderDemo.cpp  ComputeShaderDemo.h  CubeDemo.cpp  CubeDemo.h  DiffuseLightingDemo.cpp  DiffuseLightingDemo.h  DirectionalShadowMappingDemo.cpp  DirectionalShadowMappingDemo.h  DisplacementMappingDemo.cpp  DisplacementMappingDemo.h  DistortionMappingDemo.cpp  DistortionMappingDemo.h  EnvironmentMappingDemo.cpp  EnvironmentMappingDemo.h  FogDemo.cpp  FogDemo.h  GaussianBlurDemo.cpp  GaussianBlurDemo.h  GeometryShaderDemo.cpp  GeometryShaderDemo.h  HdrDemo.cpp  HdrDemo.h  InstancingDemo.cpp  InstancingDemo.h  InstancingPointLightDemo.cpp  InstancingPointLightDemo.h  ModelDemo.cpp  ModelDemo.h  ModelTessellationDemo.cpp  ModelTessellationDemo.h  (+31 more)
src/demo/src/Materials/: ColorFilterMaterial.cpp  ColorFilterMaterial.h  ComputeShaderMaterial.cpp  ComputeShaderMaterial.h  DepthMapMaterial.cpp  DepthMapMaterial.h  DiffuseLightingMaterial.cpp  DiffuseLightingMaterial.h  DirectionalLightMaterial.cpp  DirectionalLightMaterial.h  DirectionalShadowMappingMaterial.cpp  DirectionalShadowMappingMaterial.h  DisplacementMappingMaterial.cpp  DisplacementMappingMaterial.h  DistortionMappingMaterial.cpp  DistortionMappingMaterial.h  EnvironmentMappingMaterial.cpp  EnvironmentMappingMaterial.h  FogMaterial.cpp  FogMaterial.h  InstancingMaterial.cpp  InstancingMaterial.h  InstancingPointLightMaterial.cpp  InstancingPointLightMaterial.h  LightMaterial.cpp  LightMaterial.h  LightsMaterial.cpp  LightsMaterial.h  ModelTessellationMaterial.cpp  ModelTessellationMaterial.h  MultipleLightsMaterial.cpp  MultipleLightsMaterial.h  MultiplePointLightsMaterial.cpp  MultiplePointLightsMaterial.h  NormalMappingMaterial.cpp  NormalMappingMaterial.h  PbrLightingMaterial.cpp  PbrLightingMaterial.h  PbrLightsMaterial.cpp  PbrLightsMaterial.h  (+28 more)
src/demo/src/components/: BasicComponent.cpp  BasicComponent.h  BasicEffectMaterialComponent.cpp  BasicEffectMaterialComponent.h  BasicMaterialComponent.cpp  BasicMaterialComponent.h  ColorFilterComponent.cpp  ColorFilterComponent.h  ColorFilterEffectMaterialComponent.cpp  ColorFilterEffectMaterialComponent.h  ColorFilteringComponent.cpp  ColorFilteringComponent.h  CubeComponent.cpp  CubeComponent.h  DiffuseLightingComponent.cpp  DiffuseLightingComponent.h  DiffuseLightingEffectMaterialComponent.cpp  DiffuseLightingEffectMaterialComponent.h  DiffuseLightingMaterialComponent.cpp  DiffuseLightingMaterialComponent.h  DisplacementMappingComponent.cpp  DisplacementMappingComponent.h  DisplacementMappingEffectMaterialComponent.cpp  DisplacementMappingEffectMaterialComponent.h  EnvironmentMappingComponent.cpp  EnvironmentMappingComponent.h  EnvironmentMappingEffectMaterialComponent.cpp  EnvironmentMappingEffectMaterialComponent.h  FogComponent.cpp  FogComponent.h  FogEffectMaterialComponent.cpp  FogEffectMaterialComponent.h  GaussianBlurComponent.cpp  GaussianBlurComponent.h  MaterialComponent.cpp  MaterialComponent.h  ModelComponent.cpp  ModelComponent.h  NormalMappingComponent.cpp  NormalMappingComponent.h  (+24 more)
src/demo/src/effects/: BasicMaterial.cpp  BasicMaterial.h  SkyboxMaterial.cpp  SkyboxMaterial.h  TextureMappingMaterial.cpp  TextureMappingMaterial.h
src/demo/src/materials/: BasicMaterial.cpp  BasicMaterial.h  TextureMappingMaterial.cpp  TextureMappingMaterial.h
src/game/: CMakeLists.txt
src/game/src/: CubeDemoComponent.cpp  CubeDemoComponent.h  Dummy.cpp  Game.cpp  Game.h  Program.cpp  TriangleDemoComponent.cpp  TriangleDemoComponent.h
